logs/Slang/generated/hdlconv/hdlconvertor_p494_2.sv.log
name: hdlconvertor_p494_2
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494_2.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494_2.sv:1:1: error: expected member
checker counter_model(logic flag);
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494_2.sv:1:33: error: expected declarator
checker counter_model(logic flag);
                                ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494_2.sv:3:15: error: use of undeclared identifier '$global_clock'
  always_ff @($global_clock)
              ^~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494_2.sv:6:3: error: language feature not yet supported
  assert property (@($global_clock) counter == 0 |-> flag);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494_2.sv:8:1: error: expected member
endchecker : counter_model
^~~~~~~~~~
